--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My first discord bot.",
   "main": "index.js",
   "scripts": {
-    "test": "No tests.." && exit 1"
+    "test": "No tests.."
   },
   "author": "AcidViper",
   "license": "ISC",
